change getclient logic